# vcenter_mcp

./: .gitignore  MANIFEST.in  README.md  SECURITY_POSTURE.md  available_tools.md  inventory.yaml  pyproject.toml
src/vcenter_mcp/: __init__.py  app.py  cli.py  client.py  credentials.py  registry.py  security.py  server.py  vsphere_ws.py
src/vcenter_mcp/tools/: __init__.py  appliance.py  inventory.py  tagging.py  vcenter_inventory.py  vm_details.py
tests/: test_registry.py
